--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,7 @@ a {
 }
 
 .card {
-  overflow: hidden;
-  width: 88vw;
+  max-width: 88%;
   text-align: center;
   background-color: hsl(0, 0%, 100%);
   box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
@@ -111,13 +110,21 @@ a {
   font-weight: 700;
 }
 
+.price a:hover {
+  text-decoration: none;
+  color: hsl(245, 83%, 68%);
+}
+
 .confirm {
+  display: flex;
+  justify-content: center;
   margin-top: 1em;
   font-size: 0.9rem;
 }
 
 .confirm ul {
   display: flex;
+  flex: 1;
   flex-direction: column;
   gap: 1.9rem;
 }
@@ -132,7 +139,45 @@ a {
   box-shadow: 0px 10px 20px hsl(245, 75%, 52%, 0.3);
 }
 
-.cancel {
+.confirm-btn:hover {
+  background-color: hsl(245, 83%, 68%);
+  transition: 250ms ease;
+}
+
+.cancel-btn {
   color: var(--Desaturated_blue);
   font-weight: 900;
+}
+
+.cancel-btn:hover {
+  color: var(--Dark_blue);
+}
+
+.attribution {
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+.attribution a:hover {
+  font-weight: 700;
+}
+
+/* media queries */
+
+@media screen and (min-width: 767px) {
+  body {
+    background: var(--Pale_blue) no-repeat
+      url(./images/pattern-background-desktop.svg);
+  }
+
+  .card {
+    max-width: 28%;
+  }
+
+  .confirm-btn {
+    padding: 0.8rem 5.6rem;
+  }
 }
